# beeviro

./: .eslintignore  .gitattributes  .gitignore  .prettierignore  Cargo.toml  LICENSE-MIT.md  components.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
dmdump/: Cargo.toml
dmdump/src/: cli.rs  main.rs  severity.rs
dmdump/templates/: symptom.ts
src/: main.tsx
src/components/: App.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  dialog.tsx  index.ts  menubar.tsx  select.tsx  switch.tsx
src/css/: App.css  index.css
src/lib/: index.ts  utils.ts
src/virology/: index.js  stats.ts  symptom.ts
src/virology/symptoms/: alcohol.ts  alkali.ts  asphyxiation.ts  beard.ts  beesease.ts  blobspores.ts  braindamage.ts  chem.ts  cockroach.ts  coma.ts  confusion.ts  cough.ts  deafness.ts  emp.ts  fever.ts  fire.ts  flesh_death.ts  flesh_eating.ts  genetic_mutation.ts  growth.ts  hallucigen.ts  headache.ts  heal.ts  heartattack.ts  index.ts  inorganic_adaptation.ts  itching.ts  jitters.ts  light.ts  lubefeet.ts  macrophage.ts  meme.ts  metabolism.ts  mind_restoration.ts  nano_boost.ts  nano_destroy.ts  narcolepsy.ts  necroseed.ts  organ_restoration.ts  oxygen.ts  (+32 more)
