[package]
name = "dmdump"
description = "Here be dragons (that made out with Cthulhu)"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = { version = "0.12", features = ["serde-json"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
dreammaker = { git = "https://github.com/SpaceManiac/SpacemanDMM" }
#fancy-regex = "0.11"
log = "0.4"
once_cell = "1"
pretty_env_logger = "0.5"
regex = "1"
serde = { version = "1", features = ["derive"] }
